2008-10-16  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (USER-INFO): for :DEFAULT,
	use getpwuid(getuid()) if getlogin() fails

2008-10-16  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (CHECK_TYPE): add
	(ensure_living_display, get_ptr_object_and_display)
	(make_xid_obj_low, get_xid_object_and_display, get_display_obj_tc)
	(general_plist_reader, general_plist_writer, SET-WM-HINTS): use it

2008-10-16  Drutsa Pavel  <rawlik@users.sourceforge.net>

	fix bug #[ 2164603 ]: Error: should have been a WINDOW, but was PIXMAP
	* modules/clx/new-clx/clx.f (make_drawable): use
	"make_xid_obj (`XLIB::DRAWABLE`...)" instead of "make_window()"

2008-10-13  Michael Kappert  <michael.kappert@gmx.net>
	Sam Steingold  <sds@gnu.org>

	* makemake.in (check-script): strip CR (\r) from all output for woe32

2008-10-13  Sam Steingold  <sds@gnu.org>

	* makemake.in, configure: remove --enable-maintainer-mode and
	never create the autoconf target because configure really depends
	on m4/*, glm4/* &c and to implement this properly we would need to
	check in makemake for autoconf 2.61+ in path, and then generate
	much of Makefile.devel in makemake.in (IOW, I can no longer recall
	when was the last time this target was useful as opposed to a nuisance)

2008-10-10  Sam Steingold  <sds@gnu.org>

	* makemake.in (UTILCOMPILE): use XCPPFLAGS XCFLAGS XCLFLAGS and
	omit EXTRAOBJ to avoid mingw __errno linking problems

2008-10-10  Sam Steingold  <sds@gnu.org>

	* makemake.in: finish the 2007-10-29 (1.690) patch:
	remove all mentions of XCC_UNUSABLE_CPP and gcc-cccp

2008-10-10  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (get_file_size) [WIN32_NATIVE]: add
	(FILE-SIZE) [WIN32_NATIVE]: use it instead of GetFileSizeEx
	which takes a handle and not a pathname

2008-10-08  Sam Steingold  <sds@gnu.org>

	* modules/bindings/glibc/linux.lisp (strsignal, _NSIG): add;
	use DEF-C-CONST instead of DEFCONSTANT for signals